# yyh_app

./: .gitignore  README.md
am335x_project/0_back_up/: 3_serial_fork.tar  4_serial_thread.tar
am335x_project/1_hello_world/: CMakeLists.txt  hello.c
am335x_project/3_serial_fork/: CMakeLists.txt  main.c  uart.c
am335x_project/4_serial_thread/: CMakeLists.txt  main.c  uart.c  uart.h
am335x_project/6_msg/: CMakeLists.txt  msg.c
linux_c/10_shm_posix/: posix_shm_read.c  posix_shm_write.c
linux_c/11_msg/: msg_recv_posix.c  msg_send_posix.c
linux_c/12_socket/: CMakeLists.txt  socket_tcp_server.c
linux_c/1_fork/: fork_1.c  fork_exe.c  fork_primer_3.c
linux_c/2_gdb_test/: gdb_test.c
linux_c/4_pragma_test/: struct.c
linux_c/6_environ/: environ.c
linux_c/7_sem/: sem.c
linux_c/8_shm/: shm_read.c  shm_write.c
linux_c/9_daemon/: daemon.c
linux_c/fork/: fork_primer.c  fork_primer_2.c  fork_system.c  mysh.c
linux_driver/0_chrdev/: driver.c
linux_driver/1_plantform/: .driver.ko.cmd  .driver.mod.cmd  .driver.mod.o.cmd  .driver.o.cmd  Makefile  device.c  driver.c  driver.ko  driver.mod  driver.mod.c  modules.order
linux_driver/2_hello_world/: .hello_device.ko.cmd  .hello_device.mod.o.cmd  .hello_device.o.cmd  CMakeLists.txt  Makefile  Makefile~  hello_device.c  hello_device.ko  hello_device.mod.c  modules.order
linux_driver/3_gpio_led/: Makefile  app  led_app.c  led_driver.c  my_build.sh
linux_driver/3_led/: led_device.c
linux_driver/4_gpio_beep/: Makefile  buzzer.c  buzzer_app  buzzer_app.c  my_build.sh
linux_driver/5_keyirq/: .irq_key.ko.cmd  (+9 more)
(+148 files in other folders)
